# vault

./: .gitignore  README.md  bin_install.sh  bun.lockb  notes.md  package.json  tailwind.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  error.rs  file_system.rs  lib.rs
src-tauri/src/encrypt/: aes.rs  ecc.rs  error.rs  master_password.rs  mod.rs  rsa.rs
src-tauri/src/examples/: yubikey_tool.rs
src-tauri/src/ipc/: encrypt.rs  mod.rs  secrets.rs  yubikey.rs
src-tauri/src/master_password/: error.rs  mod.rs  password_encryptor.rs
src-tauri/src/secrets/: error.rs  mod.rs  vault.rs
src-tauri/src/yubikey/: experimental.rs  experimental_setup.rs  markers.rs  mod.rs  standalone.rs
src-tauri/tests/: yubikey_test.rs
src-tauri/tests/fixtures/: plaintext.txt  pubkey.pem
src/lib/: AppState.svelte.ts  session.ts  stronghold.ts  types.ts
src/lib/components/: FirstSetup.svelte  MainContent.svelte  MasterPassword.svelte  Modal.svelte  Navbar.svelte  SideNavigation.svelte  Sidebar.svelte  StickyNavbar.svelte  TableSearch.svelte  Toaster.svelte  Toasts.svelte  Yubikey.svelte
src/lib/layouts/: DefaultLayout.svelte
src/lib/stores/: refresh.ts  toast.svelte.ts  toaster-state.svelte.ts  toaster.svelte.ts
src/lib/utils/: Frame.svelte  Wrapper.svelte  sidebar_layout.svelte
src/lib/validators/: index.ts  master_password.ts
src/routes/: +layout.svelte  +page.svelte  yubikey.svelte
src/routes/account/: +layout.svelte
src/routes/first_setup/: +page.svelte
src/routes/init/: +page.svelte
src/routes/secrets/: +layout.svelte  (+3 more)
(+38 files in other folders)
