[package]
name = "vault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
tempfile = "3.8.1"
tauri-plugin-fs = "2"
dirs = "6.0.0"
uuid = "1.13.1"
ring = "0.16"
aes-gcm = "0.10"
rust-crypto = "0.2.36"

[dev-dependencies]
tempfile = "3.10.0"
